--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,17 @@ footer {
 
 a {
 	text-decoration: none;
-	color: #222;
+	color: #ff9d5c;
 	font-weight: 700;
+}
+
+nav a {
+	color: #222;
+	text-transform: uppercase;
+}
+
+footer a {
+	color: #222;
 	text-transform: uppercase;
 }
 
@@ -83,8 +92,7 @@ h4 {
 }
 
 ul {
-	text-decoration: none;
-	padding-bottom: 1.5em;
+	list-style-type: disc;
 }
 
 li {
@@ -136,6 +144,7 @@ input[type="submit"] {
 	background: #ff9d5c;
 	box-shadow: 1.5px 1.5px 2px #222;
 	color: #fff;
+	text-transform: uppercase;
 }
 
 .btn:hover {
@@ -152,6 +161,7 @@ input[type="submit"] {
 	background: #3eb449;
 	box-shadow: 1.5px 1.5px 2px #222;
 	color: #fff;
+	text-transform: uppercase;
 }
 
 .donate:hover {
@@ -177,6 +187,7 @@ input[type="submit"] {
 	background: #ffed83;
 	width: 100%;
 	color: #222;
+	margin-top: 2em;
 }
 
 .social {
@@ -187,6 +198,11 @@ input[type="submit"] {
 
 .social img {
 	width: 1.5em;
+}
+
+.no-bullets {
+	padding-bottom: 1.5em;
+	list-style: none;
 }
 
 .italic {
@@ -244,11 +260,11 @@ input[type="submit"] {
 	color: #3eb489;
 }
 
-#involved {
+#yellow {
 	color: #ffcd73;
 }
 
-#mission {
+#blue {
 	color: #87ceeb;
 }
 
@@ -299,7 +315,90 @@ input[type="submit"] {
 	height: 13em;
 }
 
+#health-header {
+	background: radial-gradient(rgba(245,235,220,.5),rgba(245,235,220,.33)), url(images/wangama-health.jpg);
+	background-size: cover;
+	text-align: center;
+	padding: 1em;
+}
 
+#topic {
+	width: 100%;
+}
+
+#health-projects div {
+	float: left;
+	width: 30%;
+	margin: 1%;
+}
+
+#health-projects img {
+	width: 100%
+}
+
+#healthcenter-img {
+	float: left;
+	width: 40%;
+}
+
+#healthcenter-img img {
+	width: 90%;
+	padding: 1em 0;
+}
+
+#side-by-side {
+	width: 100%;
+}
+
+#copy {
+	float: right;
+	width: 60%;
+}
+
+#photo {
+	float: left;
+	width: 40%;
+	padding: 1em 0;
+}
+
+#photo img {
+	width: 75%;
+	padding: 1em 0;
+}
+
+#education-header {
+	background: radial-gradient(rgba(245,235,220,.5),rgba(245,235,220,.33)), url(images/wangama-kids.jpg);
+	background-size: cover;
+	text-align: center;
+	padding: 1em;	
+}
+
+#education-projects div {
+	float: left;
+	width: 45%;
+	margin: 1%;
+}
+
+#education-projects img {
+	width: 100%
+}
+
+#environment-header {
+	background: radial-gradient(rgba(245,235,220,.5),rgba(245,235,220,.33)), url(images/wangama-environment.jpg);
+	background-size: cover;
+	text-align: center;
+	padding: 1em;	
+}
+
+#environment-projects div {
+	float: left;
+	width: 30%;
+	margin: 1%;
+}
+
+#environment-projects img {
+	width: 100%
+}
 
 @media only screen and (max-width: 1172px) {
 	body {
@@ -415,6 +514,34 @@ input[type="submit"] {
 		float: none;
 		width: 100%;
 	}
+	#copy {
+		float: none;
+		width: 100%;
+	}
+	#photo {
+		float: none;
+		width: 100%;
+		text-align: center;
+	}
+	#photo img {
+		padding: 0;
+	}
+	#health-projects div {
+		float: none;
+		width: 100%;
+		margin: 1%;
+	}
+	#health-projects img {
+		width: 75%
+	}
+	#education-projects div {
+		float: none;
+		width: 100%;
+		margin: 1%;
+	}
+	#education-projects img {
+		width: 75%
+	}
 }
 
 @media only screen and (max-width: 580px) {
@@ -428,7 +555,9 @@ input[type="submit"] {
 		margin: 1em;
 	}
 	h1 {
+		font-size: 4em;
 		margin-top: .5em;
+		padding-bottom: 0;
 	}
 	h3 {
 		width: 100%;
