--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,10 @@ h4 {
 	color: #87ceeb;
 }
 
+p {
+	padding-bottom: 1em;
+}
+
 ul {
 	list-style-type: disc;
 }
@@ -256,9 +260,6 @@ input[type="submit"] {
 	width: 90%;
 }
 
-#waystohelp h2 {
-	padding-top: 0;
-}
 
 #donate {
 	color: #3eb489;
@@ -403,6 +404,13 @@ input[type="submit"] {
 
 #environment-projects img {
 	width: 100%
+}
+
+#donateheader {
+	background: radial-gradient(rgba(245,235,220,.5),rgba(245,235,220,.33)), url(images/wangama-backpack.jpg);
+	background-size: cover;
+	text-align: center;
+	padding: 1em;	
 }
 
 @media only screen and (max-width: 1172px) {
