new-health-header

--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,7 @@ input[type="submit"] {
 }
 
 #health-header {
-	background: radial-gradient(rgba(245,235,220,.5),rgba(245,235,220,.33)), url(images/wangama-health.jpg);
+	background: radial-gradient(rgba(245,235,220,.5),rgba(245,235,220,.33)), url(images/healthcenter-dance.jpg);
 	background-size: cover;
 	text-align: center;
 	padding: 1em;
